--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #faf4ff;
+}
+
 h2 {
   text-align: center;
   color: #d9bf77;
@@ -6,6 +10,13 @@ h2 {
 h3 {
   text-align: center;
   color: #9c5518;
+}
+
+table.center {
+  border-collapse: collapse;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 th {
@@ -17,13 +28,5 @@ th {
 td {
   color: #687466;
   border: 1px solid #9dc6a7;
-  border-color: #9dc6a7;
   padding: 25px;
-}
-
-table.center {
-  border-collapse: collapse;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
 }
