--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /***********************************TAG SELECTOR*******************************/
 body {
-  background-color: #f7f7f7;
+  background-color: #b80d57;
 }
 
 h1, h2 {
