--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ input[type=text]{
   background-color: #ffffdd;
 }
 
-.btn {
+/*.btn {
   background: #11cdd4;
   background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
   background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
@@ -144,4 +144,4 @@ input[type=text]{
   background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
-}
+}*/
