--- a/style.css
+++ b/style.css
@@ -27,27 +27,9 @@ th {
 }
 
 td {
-  color: #687466;
+  color: #d9bf77;
   border: 1px solid #9dc6a7;
   padding: 25px;
-}
-
-a {
-  text-decoration: none;
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
-  display: block;
-  width: 250px;
-  margin: auto;
-}
-
-a:hover {
-  color: #af0404;
-}
-
-a::before {
-  content: "👉 ";
-  font-weight: bold;
 }
 
 hr {
@@ -145,3 +127,75 @@ input[type=text]{
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
 }*/
+#formBody{
+  background: -webkit-linear-gradient(left, #888888, #888888);
+}
+
+.contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+}
+.contact-form .form-control{
+    border-radius:1rem;
+}
+.contact-image{
+    text-align: center;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: #0062cc;
+}
+.contact-form .btnContact {
+    width: 50%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #dc3545;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+}
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+}
+
+/***********************************CLASS SELECTOR*******************************/
+#link{
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  display: block;
+  width: 250px;
+  margin: auto;
+}
+
+#link::before{
+  content: "👉 ";
+  font-weight: bold;
+}
+
+#link:hover{
+  color: #af0404;
+}
