--- a/style.css
+++ b/style.css
@@ -1,18 +1,43 @@
-/***********************************TAG SELECTOR*******************************/
+/* body selector */
 body {
   font-family: "Montserrat";
 }
 
-h1, h2 {
-  /* text-align: center; */
+/****************** navigation bar section ******************/
+
+.navbar{
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand{
+  font-size: 3.5rem;
+  font-weight: bold;
   color: #d9bf77;
 }
 
-h3 {
+.nav-item{
+  padding: 0 10px;
+  margin: auto;
+}
+
+.nav-link{
+  font-size: 1.2rem;
+  color: #d9bf77;
+}
+
+/****************** Heading secion ******************/
+/* feedback heading */
+.feedback-heading {
+  color: #0062cc;
+}
+
+/* h3-heading */
+.h3-heading {
   text-align: center;
   color: #9c5518;
 }
 
+/****************** Prime Minister table section ******************/
 table {
   border-collapse: collapse;
   text-align: center;
@@ -36,19 +61,77 @@ td:hover{
   color: #ffa41b;
 }
 
+/****************** Horizontal line section ******************/
 hr {
   border-style: none;
   border-top-style: dotted;
   border-width: 5px;
-  width: 15.5%;
+  width: 35.5%;
   color: #649d66;
   margin: 50px auto 20px
 }
 
+/****************** Feedback Form section ******************/
 form {
   padding: 30px;
   text-align: left;
   margin: auto;
+}
+
+.contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+
+}
+
+.contact-form .form-control{
+    border-radius:1rem;
+}
+
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: #0062cc;
+}
+
+.contact-form .btnContact {
+    width: 50%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #dc3545;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 40px;
+    margin-left: 90px;
+    margin-right: auto;
+}
+
+/* Feedback image section */
+.contact-image{
+    text-align: center;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+
+/****************** gitCommand section ******************/
+.gitCommand, .learnCodeDiv, .linuxCmd {
+  color: #687466;
+  padding: 0 0 1.5rem;
 }
 
 dl{
@@ -56,7 +139,6 @@ dl{
 }
 
 dt {
-  /* display: block;  */
   margin-top: 50px;
 }
 
@@ -72,49 +154,28 @@ dt::after{
   content: ": ";
 }
 
-dt:hover{
-  color: #ffa41b;
+.gitCmdHeading:hover{
+  /* color: #ffa41b; */
+  /* color: #0062cc; */
+  color: red;
 }
 
+.linuxCmdHeading:hover{
+  color: red;
+}
+
+/****************** Font Awesome Section ******************/
 i:hover{
   color: #ff4c68;
 }
-/*
-i{
-  color: #ff4c68;
-} */
-
-
 
 /* Another way to style using type attribute
 input[type=text]{
   background-color: red;
 }*/
-/***********************************CLASS SELECTOR*******************************/
-.gitCommand {
-  color: #687466;
-  padding: 0 0 1.5rem;
-}
 
-/* .hr{
-  color: #fff;
-} */
 
-/* .gitCommand ul {
-  display: inline-table;
-  margin: 0;
-  padding: 0;
-}
-
-.gitCommand li {
-  padding: 10px 10px;
-}
-
-.gitCommand li::selection{
-  color: red;
-  background-color: yellow;
-} */
-
+/****************** table of content section ******************/
 .content {
   color: #687466;
 }
@@ -136,148 +197,57 @@ input[type=text]{
   text-align: left;
 }
 
-.feedback textarea {
-  background-color: #ffffdd;
-}
-
-.feedback input {
-  background-color: #ffffdd;
-}
-
-/*.btn {
-  background: #11cdd4;
-  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
-  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-  -webkit-border-radius: 8;
-  -moz-border-radius: 8;
-  border-radius: 8px;
-  font-family: 'Montserrat', sans-serif;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 6px 30px 6px 30px;
-  text-decoration: none;
-}
-
-.btn:hover {
-  background: #30e3cb;
-  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
-  text-decoration: none;
-}*/
-.contact-form{
-    background: #fff;
-    margin-top: 10%;
-    margin-bottom: 5%;
-    width: 70%;
-}
-.contact-form .form-control{
-    border-radius:1rem;
-}
-.contact-image{
-    text-align: center;
-}
-.contact-image img{
-    border-radius: 6rem;
-    width: 11%;
-    margin-top: -3%;
-    transform: rotate(29deg);
-}
-.contact-form form{
-    padding: 14%;
-}
-.contact-form form .row{
-    margin-bottom: -7%;
-}
-.contact-form h3{
-    margin-bottom: 8%;
-    margin-top: -10%;
-    text-align: center;
-    color: #0062cc;
-}
-.contact-form .btnContact {
-    width: 50%;
-    border: none;
-    border-radius: 1rem;
-    padding: 1.5%;
-    background: #dc3545;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-}
-/* .btnContactSubmit
-{
-    width: 50%;
-    border-radius: 1rem;
-    padding: 1.5%;
-    color: #fff;
-    background-color: #0062cc;
-    border: none;
-    cursor: pointer;
-} */
-
-/* // workaround
-.intl-tel-input {
-  display: table-cell;
-}
-.intl-tel-input .selected-flag {
-  z-index: 4;
-}
-.intl-tel-input .country-list {
-  z-index: 5;
-}
-.input-group .intl-tel-input .form-control {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 0;
-} */
-
-.navbar{
-  padding: 0 0 4.5rem;
-}
-
-.navbar-brand{
-  font-size: 3.5rem;
-  font-weight: bold;
-  color: #d9bf77;
-}
-
-.nav-item{
-  padding: 0 18px;
-}
-
-.nav-link{
-  font-size: 1.2rem;
-  font-weight: lighter;
-  color: #d9bf77;
-}
-
-
-
-/***********************************ID SELECTOR*******************************/
-#formBody{
-  background: -webkit-linear-gradient(left, #888888, #888888);
-}
-
 #link{
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   display: block;
   width: 200px;
   margin: auto;
+  font-size: 100%;
 }
 
-/* #link::before{
-  content: "👉 ";
-  font-weight: bold;
-} */
-
 #link:hover{
-  color: #ffa41b;
+    color: red;
+}
+
+/****************** Code for Everyone ******************/
+.learnCode:hover {
+  color: red;
+}
+
+/****************** footer description ******************/
+.footer-details:hover {
+  color: red;
+}
+
+.social-footer {
+  padding: 1%;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #dddddd;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.social-footer .social-footer-icons {
+  margin: 0;
+}
+
+.social-footer .social-footer-icons .fa {
+  font-size: 1.3rem;
+  /* border-radius: 100%; */
+  padding: 0.5rem 1.5rem;
+}
+.social-footer  p{
+  font-size: 1rem;
+  font-family: 'Caveat', cursive;
+  margin-top: 1%;
+}
+
+.social-footer .social-footer-icons .fa:hover {
+  color: #4a4a4a;
+  transition: color 0.3s ease-in;
 }
